--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
+\documentclass[prodmode,permissions]{acmsmall}
 \input{defs}
-
 \begin{document}
 
 \title{Eliciting Decision Advice with Good Incentives\\ and Decision-Maker Freedom}
