--- a/market.tex
+++ b/market.tex
@@ -188,32 +188,42 @@ Payments can be more than the improvement in the reward the mechanism creates \N
 As presented the VCG style direct mechanism might have higher payments than the benefits it provides in terms of higher rewards (if there are states of the world with sufficiently high reward differentials and a sufficiently large number of experts with complementary signals). Thus the subject might be better off not participating a priori. Here we introduce a variation on the mechanism that re-scales payments using the prior so a subject a priori wishes to parcitipate in the mechanism.
 
 
-\begin{mech}[Efficiency and Rational Entry]
 
 Let $E[r|c(s)]$ denote the expected reward obtained from choosing the optimal action using all signals if they where reported truthfully, and $E[r|c(P)] $ the expetec treward from picking the action using only the prior and no singals. Thus $E[r|c(S)] - E[r|c(P)] $ is the expected surplus from using the information in the truthful equilibrium of the mechanism relative to using only the priors. For a efficient mechanism to be rational apriori for the subject to implement it must be that $E[r|c(S)] - E[r|c(P)] > E[\sum \pi]$ where $\pi$ is either the result of a nash equilibrium or in dominant strategy (i.e. we set all elements of $\hat{s}$ jointly to maximize $\sum \pi$, even ifthis does not result in a equilirium for the experts).
 
-Note that a constant afine transformation of the rewards preserves the incentives. Denote by $alpha$ and $beta$ two constants that recale the reward part of the payment.
+Note that a constant afine transformation of the rewards preserves the incentives. Denote by $alpha$ athat scale the reward part of the payment.
+
+\begin{mech}[Efficiency and Rational Entry]
+
+Choose value of $\alpha$ can be chosen apriori based on $P$ such that: $ E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)] $. 
+
+\NDP{Spell out how? This seems like it should be just algebra, for exmaple if aprior I expect 10 complementary signals which combined produce a expected surplus of 1 then i want to have $g = \alpha pi$ and \alpha < 1/10. How can we make this procedure generic? }
 
 \[
   \rho_i  = \alpha \pi_i
 \]
-\ND{Initiall I tried instead of just a multiplier < 1, having a gneeral function g with g(0) = 0, and g is monotonically increasing in $pi_i$. But this doesnt work if you lower the negatives more than the positive for example you fuck up the payments.
-}
-
-The value of $\alpha$ can be chosen apriori based on $P$ such that: $ E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)] $ . 
-
-\NDP{This seems like it should be just algebra, for exmaple if aprior I expect 10 complementary signals which combined produce a expected surplus of 1 then i want to have $g = \alpha pi$ and \alpha < 1/10. How can we make this procedure generic? }
 
 \end{mech}
 
+\NDP{Initiall I tried instead of just a multiplier < 1, having a gneeral function g with g(0) = 0, and g is monotonically increasing in $pi_i$. But this doesnt work if you lower the negatives more than the positive for example you fuck up the payments. Do we prove the scaling has to be a multiplicative, an aditive breaks it (if positive cnat help with budget and if negative can cause it to be irational for experts to enter if expected value of expert is bellow, while non linear transformation instead of linear multipler doesnt preserve the expectations and tus can also break the incentives of the experts to be truthful)
+}
+
 \begin{lem}
-	the rescaling component of the mechanism cannot be gamed
+	The rescaling of the mechanism preserves the incentives of experts
 \end{lem}
 
 \begin{proof}
 	As they are set apriori based on expectations only. both alpha is invariant to any reports the experts make. Since the transformation is afine, whatever report maximizes payoffs remains unchanged.
 \end{proof}
 
+
+\begin{lem}
+	entering the mechanism is positive expectation for the subject.
+\end{lem}
+
+\begin{proof}
+  By construction \alpha is picked such that $E[\sum \rho_i] < E[r|c(s,P)] - E[r|c(P)] $
+\end{proof}
 
 
 \begin{lem}
@@ -225,8 +235,15 @@ Since a truthful signal cannot lower (if all other signals are being reported tr
 \end{proof}
 
 
+\begin{thm}
+	the scaled efficient mechanism is individualy rational for all agents
+\end{lem}
 
+\begin{proof}
+inmidiate from the two previous lemmas, since the subject and experts are all the agents involved.
+\end{proof}
 
+\section{Dominant Mechanisms}
 
 \begin{defn}[Dominant Strategy Truthfulness]
 	ftw
